[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/TempHealthBar.gd" type="Script" id=1]
[ext_resource path="res://UI/HealthBarback.png" type="Texture" id=2]
[ext_resource path="res://UI/HealthBaroutline.png" type="Texture" id=3]
[ext_resource path="res://UI/HealthBarprogress2.png" type="Texture" id=4]




[node name="TempHealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 114.0
margin_bottom = -62.0
script = ExtResource( 1 )

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_top = -1.75807
margin_right = 430.0
margin_bottom = 118.242
value = 5.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 1, 0.282353, 0.286275, 1 )

[node name="HealthBarOver" type="TextureProgress" parent="."]
margin_top = -1.75807
margin_right = 430.0
margin_bottom = 118.242
value = 5.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="UpdateTween" type="Tween" parent="."]
